--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -102,8 +102,7 @@ class="custom-toggle-group"
 <!-- Gauge for ICD9 WITH Diabetic Estimation -->
 <mat-card class="gauge-card">
   <div class="gauge-title">
-    מאובחנים עם אומדן
-    <span
+   ביצוע אומדן כף רגל סוכרתית     <span
       matTooltip="מונה: מטופלים עם אבחנת ICD9 שיש להם גם אומדן סוכרת | מכנה: סך מטופלים עם אבחנת סכרת ב-ICD9"
       matTooltipPosition="above"
       style="cursor: pointer; font-size: 16px; margin-left: 5px;"
@@ -127,50 +126,90 @@ class="custom-toggle-group"
     </div>
   </div>
 </mat-card>
-      <!-- ICD9 Percentage Card -->
-      <mat-card class="gauge-card">
-        <div class="gauge-title"> אחוז מטופלים עם סוכרת  <span 
-          matTooltip="מונה: סך מטופלים עם סכרת על פי קוד | מכנה: סך מטופלים"
- 
-          matTooltipPosition="above"
-          style="cursor: pointer; font-size: 16px; margin-left: 5px;"
-        >
-        <mat-icon style="color: #007BFF;">help_outline</mat-icon>
+<mat-card class="gauge-card">
+  <div class="gauge-title">
+   אי ביצוע אומדן כף רגל סוכרתית    <span
+    matTooltip="מונה: מטופלים עם אבחנת ICD9 אך ללא אומדן סוכרת | מכנה: סך מטופלים עם אבחנת סכרת ב-ICD9"
+    matTooltipPosition="above"
+    style="cursor: pointer; font-size: 16px; margin-left: 5px;"
+  >
+    <mat-icon style="color: #007BFF;">help_outline</mat-icon>
+  </span>
+  </div>
 
-        </span></div>
-        <div class="gauge-content">
-          <ngx-gauge
-            [value]="Icd9Percentage"
-            [min]="0"
-            [max]="100"
-            [label]=""
-            [append]="'%'"
-            [foregroundColor]="'#f39c12'"
-          ></ngx-gauge>
-          <div class="gauge-info">
-            סה"כ מטופלים : <strong> {{ DiagnosisICD9dataSource.data.length }} </strong> מתוך
-            <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
-          </div>
-        </div>
-      </mat-card>
+  <div class="gauge-content">
+    <ngx-gauge
+      [value]="icd9WithoutEstimationPercentage"
+      [min]="0"
+      [max]="100"
+      [label]="''"
+      [append]="'%'"
+      [foregroundColor]="'#3498db'">
+    </ngx-gauge>
+    <div class="gauge-info">
+    
+      סה"כ מטופלים: <strong>{{ PatientWithICD9AndDontHaveDiabetesEstimationDataSource.data.length }}</strong>
+      מתוך <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
+    </div>
+  </div>
+  
+</mat-card>
+<!-- <--Gauge for סוכר 70 וחולה סוכרת --> 
+  <mat-card class="gauge-card">
+    <div class="gauge-title">	היפוגליקמיה במאושפזים עם סוכרת </div>
+    <div class="gauge-content">
+      <ngx-gauge
+        [value]="sugar70DiabetesPercentage"
+        [min]="0"
+        [max]="100"
+        [label]=""
+        [append]="'%'"
+        [foregroundColor]="'#3498db'"
+      ></ngx-gauge>
+      <div class="gauge-info">
+        סה"כ מטופלים: <strong>{{ dataSourceBelow70.data.length }}</strong>
+        מתוך <strong>{{ sugerAbove180.data.length}}</strong>
+      </div>
+    </div>
+  </mat-card>
+  <mat-card class="gauge-card">
+    <div class="gauge-title">סוכר מעל 180 שלא קיבלו אינסולין </div>
+    <div class="gauge-content">
+      <ngx-gauge
+        [value]="labResultsWithoutInsulinPercentage"
+        [min]="0"
+        [max]="100"
+        [label]=""
+        [append]="'%'"
+        [foregroundColor]="'#f39c12'">
+      </ngx-gauge>
+      <div class="gauge-info">
+        סה"כ מטופלים: <strong>{{ LabResultsWithoutInsulinDataSource.data.length }}</strong>
+        מתוך <strong>{{ sugerAbove180.data.length }}</strong>
+      </div>
+    </div>
+  </mat-card>
+  <mat-card class="gauge-card">
+    <div class="gauge-title">מקבלי אינסולין  </div>
+    <div class="gauge-content">
+      <ngx-gauge
+        [value]="insulinPercentage"
+        [min]="0"
+        [max]="100"
+        [label]=""
+        [append]="'%'"
+        [foregroundColor]="'#00c0ef'"
+      ></ngx-gauge>
+      <div class="gauge-info">
+        סה"כ מטופלים: <strong>{{ InsulinDataSource.data.length }}</strong>
+        מתוך <strong>{{ sugerAbove180.data.length }}</strong>
+      </div>
+    </div>
+  </mat-card>
+      <!-- ICD9 Percentage Card -->
+     
       <!-- Insulin Percentage Card -->
-      <mat-card class="gauge-card">
-        <div class="gauge-title">מקבל אינסולין</div>
-        <div class="gauge-content">
-          <ngx-gauge
-            [value]="insulinPercentage"
-            [min]="0"
-            [max]="100"
-            [label]=""
-            [append]="'%'"
-            [foregroundColor]="'#00c0ef'"
-          ></ngx-gauge>
-          <div class="gauge-info">
-            סה"כ מטופלים: <strong>{{ InsulinDataSource.data.length }}</strong>
-            מתוך <strong>{{ sugerAbove180.data.length }}</strong>
-          </div>
-        </div>
-      </mat-card>
+   
       
       <!-- Lab Results Over 180 Percentage Card -->
   
@@ -193,7 +232,7 @@ class="custom-toggle-group"
 </mat-card> -->
 
 <!-- Below 70 Gauge -->
-<mat-card class="gauge-card">
+<!-- <mat-card class="gauge-card">
   <div class="gauge-title">סוכר מתחת ל-70</div>
   <div class="gauge-content">
     <ngx-gauge
@@ -209,11 +248,11 @@ class="custom-toggle-group"
       מתוך <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
     </div>
   </div>
-</mat-card>
+</mat-card> -->
 
       <!-- Gauge for סוכר 180 ת -->
 <mat-card class="gauge-card">
-  <div class="gauge-title">סוכר 180  
+  <div class="gauge-title">היפרגליקמיה במאושפזים עם סוכרת   
     <span 
           matTooltip="    מונה: סך מטופלים עם סכרת מעל 180 | מכנה: כלל המטופלים – מטופלים עם אבחנהב "
  
@@ -240,71 +279,33 @@ class="custom-toggle-group"
   </div>
   </div>
 </mat-card>
-  <mat-card class="gauge-card">
-    <div class="gauge-title">ללא אינסולין - סוכר מעל 180</div>
-    <div class="gauge-content">
-      <ngx-gauge
-        [value]="labResultsWithoutInsulinPercentage"
-        [min]="0"
-        [max]="100"
-        [label]=""
-        [append]="'%'"
-        [foregroundColor]="'#f39c12'">
-      </ngx-gauge>
-      <div class="gauge-info">
-        סה"כ מטופלים: <strong>{{ LabResultsWithoutInsulinDataSource.data.length }}</strong>
-        מתוך <strong>{{ sugerAbove180.data.length }}</strong>
-      </div>
-    </div>
-  </mat-card>
-<!-- <--Gauge for סוכר 70 וחולה סוכרת --> 
+
+
 <mat-card class="gauge-card">
-  <div class="gauge-title">סוכר 70 וחולה סוכרת</div>
+  <div class="gauge-title"> אחוז מטופלים עם סוכרת  <span 
+    matTooltip="מונה: סך מטופלים עם סכרת על פי קוד | מכנה: סך מטופלים"
+
+    matTooltipPosition="above"
+    style="cursor: pointer; font-size: 16px; margin-left: 5px;"
+  >
+  <mat-icon style="color: #007BFF;">help_outline</mat-icon>
+
+  </span></div>
   <div class="gauge-content">
     <ngx-gauge
-      [value]="sugar70DiabetesPercentage"
+      [value]="Icd9Percentage"
       [min]="0"
       [max]="100"
       [label]=""
       [append]="'%'"
-      [foregroundColor]="'#3498db'"
+      [foregroundColor]="'#f39c12'"
     ></ngx-gauge>
     <div class="gauge-info">
-      סה"כ מטופלים: <strong>{{ dataSourceBelow70.data.length }}</strong>
-      מתוך <strong>{{ sugerAbove180.data.length}}</strong>
+      סה"כ מטופלים : <strong> {{ DiagnosisICD9dataSource.data.length }} </strong> מתוך
+      <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
     </div>
   </div>
 </mat-card>
-<mat-card class="gauge-card">
-  <div class="gauge-title">
-מאובחנים ללא אומדן    <span
-    matTooltip="מונה: מטופלים עם אבחנת ICD9 אך ללא אומדן סוכרת | מכנה: סך מטופלים עם אבחנת סכרת ב-ICD9"
-    matTooltipPosition="above"
-    style="cursor: pointer; font-size: 16px; margin-left: 5px;"
-  >
-    <mat-icon style="color: #007BFF;">help_outline</mat-icon>
-  </span>
-  </div>
-
-  <div class="gauge-content">
-    <ngx-gauge
-      [value]="icd9WithoutEstimationPercentage"
-      [min]="0"
-      [max]="100"
-      [label]="''"
-      [append]="'%'"
-      [foregroundColor]="'#3498db'">
-    </ngx-gauge>
-    <div class="gauge-info">
-    
-      סה"כ מטופלים: <strong>{{ PatientWithICD9AndDontHaveDiabetesEstimationDataSource.data.length }}</strong>
-      מתוך <strong>{{ DiagnosisICD9dataSource.data.length }}</strong>
-    </div>
-  </div>
-  
-</mat-card>
-
-
       
       <!-- ייעוצים -->
     </div>
