--- a/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
+++ b/src/app/mitav/mitav-summary-delirium/mitav-summary-delirium.component.html
@@ -286,13 +286,15 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{ geriatricSummary?.UniquePatients || 0 }}</td>
-        <td>{{ geriatricSummary?.TotalPatientDateRows || 0 }}</td>
-        <td>{{ geriatricSummary?.TotalPatientDateRows || 0 }}</td>
+        <td>{{ geriatricSummary?.UniqueAdmissions || 0 }}</td>
+        <td>{{ geriatricSummary?.TotalConsiliums || 0 }}</td>
+        <td>{{ geriatricSummary?.TotalConsiliums || 0 }}</td> 
         <td>0</td>
+        
+
       </tr>
     </tbody>
   </table>
-  
+
 
 </div>
