--- a/src/app/chameleon-reports/breastfeeding-coordinator/breastfeeding-coordinator.component.scss
+++ b/src/app/chameleon-reports/breastfeeding-coordinator/breastfeeding-coordinator.component.scss
@@ -164,3 +164,16 @@
   mat-tab-group {
     margin-top: 80px;
   }
+
+
+  .row-green {
+    background-color: #e8f5e9 !important; /* light green */
+  }
+  
+  .row-orange {
+    background-color: #fff3e0 !important; /* light orange */
+  }
+  
+  .row-red {
+    background-color: #ffebee !important; /* light red */
+  }
