--- a/src/app/chameleon-reports/breastfeeding-coordinator/breastfeeding-coordinator.component.html
+++ b/src/app/chameleon-reports/breastfeeding-coordinator/breastfeeding-coordinator.component.html
@@ -1,7 +1,7 @@
 <app-spinner [isLoading]="isLoading"></app-spinner>
 
 <!-- ✅ Tab group must always render -->
-<mat-tab-group dir="rtl">
+<mat-tab-group dir="rtl" *ngIf="!isLoading">
 
   <!-- 🟦 Tab 1 -->
   <mat-tab label="מאושפזות ללא ייעוץ">
@@ -36,13 +36,17 @@
           </ng-container>
 
           <ng-container matColumnDef="TimeFromDeliveryInMinute">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>בדקות</th>
-            <td mat-cell *matCellDef="let row">{{ row.TimeFromDeliveryInMinute }}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>בשעות</th>
+            <td mat-cell *matCellDef="let row">
+              {{ (row.TimeFromDeliveryInMinute / 60) | number:'1.1-1' }}
+            </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="maternityDisplayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: maternityDisplayedColumns;"></tr>
-        </table>
+          <tr mat-row
+          *matRowDef="let row; columns: maternityDisplayedColumns;"
+          [ngClass]="getRowColorClass(row)">
+      </tr>        </table>
 
         <mat-paginator #maternityPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
       </mat-card>
